objects/Employee.object
<CustomObject>
    <fields>
        <fullName>EmployeeWellnessStatusAsOf__c</fullName>
        <label>EmployeeWellnessStatusAsOf</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom field to allow the creation of a related list of Employees on a location.</description>
        <label>Location (Related List)</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cvsh__CVS_Company_Code__c</fullName>
        <formula>$Setup.cvsh__Setup_Settings__c.cvsh__CVS_Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CVS Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cvsh__Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether employee is eligible to be tested for Covid-19, or not</description>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__CurrentWellnessStatusAsOf__c</fullName>
        <description>The date and time of the most recent wellness status update.</description>
        <inlineHelpText>This field doesn’t update if the wellness status is changed manually. If you update a user’s wellness status manually, update the Wellness Status As Of field, too.</inlineHelpText>
        <label>Wellness Status As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkcc__IndividualRole__c</fullName>
        <description>The role of the individual.</description>
        <inlineHelpText>Clarifies the role of the associated individual.</inlineHelpText>
        <label>Individual Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__ReadyToReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an employee wants to work at their assigned workplace.</description>
        <label>Ready To Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__DisplayName__c</fullName>
        <formula>IF( NOT(ISBLANK(PreferredFirstName)), PreferredFirstName  &amp; &quot; &quot; &amp; LastName,  FirstName &amp; &quot; &quot; &amp; LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__LocationName__c</fullName>
        <formula>Location.Name</formula>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Employees</fullName>
        <columns>Name</columns>
        <columns>FirstName</columns>
        <columns>LastName</columns>
        <columns>Location</columns>
        <columns>CurrentWellnessStatus</columns>
        <columns>EmployeeStatus</columns>
        <columns>StatusAsOf</columns>
        <columns>User</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmployeeStatus</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Employees</label>
    </listViews>
    <listViews>
        <fullName>All_Employees</fullName>
        <columns>Name</columns>
        <columns>FirstName</columns>
        <columns>LastName</columns>
        <columns>Location</columns>
        <columns>CurrentWellnessStatus</columns>
        <columns>EmployeeStatus</columns>
        <columns>StatusAsOf</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews>
    <listViews>
        <fullName>Available_to_Work</fullName>
        <columns>Name</columns>
        <columns>FirstName</columns>
        <columns>LastName</columns>
        <columns>Location</columns>
        <columns>CurrentWellnessStatus</columns>
        <columns>EmployeeStatus</columns>
        <columns>StatusAsOf</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentWellnessStatus</field>
            <operation>equals</operation>
            <value>Available To Work</value>
        </filters>
        <filters>
            <field>EmployeeStatus</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Available to Work</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageEmployees</fullName>
        <columns>Name</columns>
        <columns>FirstName</columns>
        <columns>LastName</columns>
        <columns>Location</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Employees</label>
    </listViews>
    <listViews>
        <fullName>Employees_with_Managers</fullName>
        <columns>Name</columns>
        <columns>EmployeeNumber</columns>
        <columns>Email</columns>
        <columns>Location</columns>
        <columns>Manager</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manager</field>
            <operation>equals</operation>
            <value>Katie Birdfield</value>
        </filters>
        <label>Employees with Managers</label>
    </listViews>
    <listViews>
        <fullName>San_Francisco_Tower_Employees</fullName>
        <columns>Name</columns>
        <columns>Location</columns>
        <columns>CurrentWellnessStatus</columns>
        <columns>wkcc__CurrentWellnessStatusAsOf__c</columns>
        <columns>Email</columns>
        <columns>cvsh__Eligible__c</columns>
        <columns>InternalOrganizationUnit</columns>
        <columns>EmployeeNumber</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location</field>
            <operation>contains</operation>
            <value>*</value>
        </filters>
        <label>*San Francisco Tower Employees</label>
    </listViews>
    <listViews>
        <fullName>Unknown_Employees</fullName>
        <columns>Name</columns>
        <columns>FirstName</columns>
        <columns>LastName</columns>
        <columns>Location</columns>
        <columns>CurrentWellnessStatus</columns>
        <columns>StatusAsOf</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentWellnessStatus</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <label>Unknown Wellness Status</label>
    </listViews>
    <listViews>
        <fullName>cvsh__Manage_CVS_Testing_Eligibility</fullName>
        <columns>FirstName</columns>
        <columns>LastName</columns>
        <columns>EmployeeNumber</columns>
        <columns>EmployeeStatus</columns>
        <columns>cvsh__Eligible__c</columns>
        <filterScope>Everything</filterScope>
        <label>Manage CVS Testing Eligibility</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>wkfsl__Email_field_is_required</fullName>
        <active>true</active>
        <description>Employee&apos;s email field is required</description>
        <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Employee&apos;s email field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Employee_Location_Populated</fullName>
        <active>true</active>
        <description>Employee records must have Location field populated</description>
        <errorConditionFormula>ISBLANK( Location.Id )</errorConditionFormula>
        <errorDisplayField>LocationId</errorDisplayField>
        <errorMessage>Employee records must have Location field populated</errorMessage>
    </validationRules>
</CustomObject>